# shark

./: Cargo.toml  README.md  example-config.toml
src/: main.rs  shark.rs
src/tools/: mod.rs  rust_toolchain_switcher.rs
