[package]
name = "shark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
minijinja = "2.5.0"
ollama-rs = { version = "0.2.1", features = ["stream"] }
serde = { version = "1.0.215", features = ["derive"] }
termcolor = "1.4.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.8.19"
